Done all main page, without popup

--- a/app/index.html
+++ b/app/index.html
@@ -280,12 +280,13 @@
             <div class="owl-stage-outer">
               <div class="owl-stage">
                 <div class="owl-item">
-                  <div class="sales-block__img-wrap"><a href=""><img src="./img/sales/1.jpg" alt=""/></a></div>
-                  <div class="sales-block__text-block">
-                    <div class="sales-block__price-wrap"><span class="sales-block__old-price">
-                        <strike>59700 &#x20BD;</strike></span><span class="sales-block__price">59700 &#x20BD;</span></div><a href=""><span class="sales-block__title">&Kcy;&ocy;&mcy;&ocy;&dcy; &quot;&Vcy;&ocy;&scy;&tcy;&ocy;&chcy;&ncy;&ocy;&iecy; &ocy;&chcy;&acy;&rcy;&ocy;&vcy;&acy;&ncy;&icy;&iecy;&quot;</span></a>
+                  <div class="sales-block__img-wrap"><a href="#"><img src="./img/sales/1.jpg" alt=""/></a></div>
+                  <div class="sales-block__text-block"><a class="sales-block__title" href="#">&Kcy;&ocy;&mcy;&ocy;&dcy; &quot;&Vcy;&ocy;&scy;&tcy;&ocy;&chcy;&ncy;&ocy;&iecy; &ocy;&chcy;&acy;&rcy;&ocy;&vcy;&acy;&ncy;&icy;&iecy;&quot;</a>
                     <p class="sales-block__description">&mcy;&acy;&scy;&scy;&icy;&vcy; &pcy;&acy;&lcy;&icy;&scy;&acy;&ncy;&dcy;&rcy;&acy;, &lcy;&acy;&tcy;&ucy;&ncy;&softcy;</p>
+                    <div class="sales-block__price-wrap"><span class="sales-block__old-price">
+                        <strike>59700 &#x20BD;</strike></span><span class="sales-block__price">59700 &#x20BD;</span></div>
                   </div>
+                  <div class="sales-block__button"><a href="#">В корзину</a></div>
                 </div>
               </div>
             </div>
@@ -293,11 +294,12 @@
               <div class="owl-stage">
                 <div class="owl-item">
                   <div class="sales-block__img-wrap"><a href=""><img src="./img/sales/2.jpg" alt=""/></a></div>
-                  <div class="sales-block__text-block">
-                    <div class="sales-block__price-wrap"><span class="sales-block__old-price">
-                        <strike>59700 &#x20BD;</strike></span><span class="sales-block__price">59700 &#x20BD;</span></div><a href=""><span class="sales-block__title">&Kcy;&ocy;&mcy;&ocy;&dcy; &quot;&Vcy;&ocy;&scy;&tcy;&ocy;&chcy;&ncy;&ocy;&iecy; &ocy;&chcy;&acy;&rcy;&ocy;&vcy;&acy;&ncy;&icy;&iecy;&quot;</span></a>
+                  <div class="sales-block__text-block"><a class="sales-block__title" href="#">&Kcy;&ocy;&mcy;&ocy;&dcy; &quot;&Vcy;&ocy;&scy;&tcy;&ocy;&chcy;&ncy;&ocy;&iecy; &ocy;&chcy;&acy;&rcy;&ocy;&vcy;&acy;&ncy;&icy;&iecy;&quot;</a>
                     <p class="sales-block__description">&mcy;&acy;&scy;&scy;&icy;&vcy; &pcy;&acy;&lcy;&icy;&scy;&acy;&ncy;&dcy;&rcy;&acy;, &lcy;&acy;&tcy;&ucy;&ncy;&softcy;</p>
+                    <div class="sales-block__price-wrap"><span class="sales-block__old-price">
+                        <strike>59700 &#x20BD;</strike></span><span class="sales-block__price">59700 &#x20BD;</span></div>
                   </div>
+                  <div class="sales-block__button"><a href="#">В корзину</a></div>
                 </div>
               </div>
             </div>
@@ -305,11 +307,12 @@
               <div class="owl-stage">
                 <div class="owl-item">
                   <div class="sales-block__img-wrap"><a href=""><img src="./img/sales/3.jpg" alt=""/></a></div>
-                  <div class="sales-block__text-block">
-                    <div class="sales-block__price-wrap"><span class="sales-block__old-price">
-                        <strike>59700 &#x20BD;</strike></span><span class="sales-block__price">59700 &#x20BD;</span></div><a href=""><span class="sales-block__title">&Kcy;&ocy;&mcy;&ocy;&dcy; &quot;&Vcy;&ocy;&scy;&tcy;&ocy;&chcy;&ncy;&ocy;&iecy; &ocy;&chcy;&acy;&rcy;&ocy;&vcy;&acy;&ncy;&icy;&iecy;&quot;</span></a>
+                  <div class="sales-block__text-block"><a class="sales-block__title" href="#">&Kcy;&ocy;&mcy;&ocy;&dcy; &quot;&Vcy;&ocy;&scy;&tcy;&ocy;&chcy;&ncy;&ocy;&iecy; &ocy;&chcy;&acy;&rcy;&ocy;&vcy;&acy;&ncy;&icy;&iecy;&quot;</a>
                     <p class="sales-block__description">&mcy;&acy;&scy;&scy;&icy;&vcy; &pcy;&acy;&lcy;&icy;&scy;&acy;&ncy;&dcy;&rcy;&acy;, &lcy;&acy;&tcy;&ucy;&ncy;&softcy;</p>
+                    <div class="sales-block__price-wrap"><span class="sales-block__old-price">
+                        <strike>59700 &#x20BD;</strike></span><span class="sales-block__price">59700 &#x20BD;</span></div>
                   </div>
+                  <div class="sales-block__button"><a href="#">В корзину</a></div>
                 </div>
               </div>
             </div>
@@ -317,11 +320,12 @@
               <div class="owl-stage">
                 <div class="owl-item">
                   <div class="sales-block__img-wrap"><a href=""><img src="./img/sales/1.jpg" alt=""/></a></div>
-                  <div class="sales-block__text-block">
-                    <div class="sales-block__price-wrap"><span class="sales-block__old-price">
-                        <strike>59700 &#x20BD;</strike></span><span class="sales-block__price">59700 &#x20BD;</span></div><a href=""><span class="sales-block__title">&Kcy;&ocy;&mcy;&ocy;&dcy; &quot;&Vcy;&ocy;&scy;&tcy;&ocy;&chcy;&ncy;&ocy;&iecy; &ocy;&chcy;&acy;&rcy;&ocy;&vcy;&acy;&ncy;&icy;&iecy;&quot;</span></a>
+                  <div class="sales-block__text-block"><a class="sales-block__title" href="#">&Kcy;&ocy;&mcy;&ocy;&dcy; &quot;&Vcy;&ocy;&scy;&tcy;&ocy;&chcy;&ncy;&ocy;&iecy; &ocy;&chcy;&acy;&rcy;&ocy;&vcy;&acy;&ncy;&icy;&iecy;&quot;</a>
                     <p class="sales-block__description">&mcy;&acy;&scy;&scy;&icy;&vcy; &pcy;&acy;&lcy;&icy;&scy;&acy;&ncy;&dcy;&rcy;&acy;, &lcy;&acy;&tcy;&ucy;&ncy;&softcy;</p>
+                    <div class="sales-block__price-wrap"><span class="sales-block__old-price">
+                        <strike>59700 &#x20BD;</strike></span><span class="sales-block__price">59700 &#x20BD;</span></div>
                   </div>
+                  <div class="sales-block__button"><a href="#">В корзину</a></div>
                 </div>
               </div>
             </div>
@@ -329,11 +333,12 @@
               <div class="owl-stage">
                 <div class="owl-item">
                   <div class="sales-block__img-wrap"><a href=""><img src="./img/sales/2.jpg" alt=""/></a></div>
-                  <div class="sales-block__text-block">
-                    <div class="sales-block__price-wrap"><span class="sales-block__old-price">
-                        <strike>59700 &#x20BD;</strike></span><span class="sales-block__price">59700 &#x20BD;</span></div><a href=""><span class="sales-block__title">&Kcy;&ocy;&mcy;&ocy;&dcy; &quot;&Vcy;&ocy;&scy;&tcy;&ocy;&chcy;&ncy;&ocy;&iecy; &ocy;&chcy;&acy;&rcy;&ocy;&vcy;&acy;&ncy;&icy;&iecy;&quot;</span></a>
+                  <div class="sales-block__text-block"><a class="sales-block__title" href="#">&Kcy;&ocy;&mcy;&ocy;&dcy; &quot;&Vcy;&ocy;&scy;&tcy;&ocy;&chcy;&ncy;&ocy;&iecy; &ocy;&chcy;&acy;&rcy;&ocy;&vcy;&acy;&ncy;&icy;&iecy;&quot;</a>
                     <p class="sales-block__description">&mcy;&acy;&scy;&scy;&icy;&vcy; &pcy;&acy;&lcy;&icy;&scy;&acy;&ncy;&dcy;&rcy;&acy;, &lcy;&acy;&tcy;&ucy;&ncy;&softcy;</p>
+                    <div class="sales-block__price-wrap"><span class="sales-block__old-price">
+                        <strike>59700 &#x20BD;</strike></span><span class="sales-block__price">59700 &#x20BD;</span></div>
                   </div>
+                  <div class="sales-block__button"><a href="#">В корзину</a></div>
                 </div>
               </div>
             </div>
@@ -360,7 +365,7 @@
               <ul>
                 <li>
                   <div class="features-block__item-wrap">
-                    <div class="features-block__img-wrap"><img src="https://via.placeholder.com/50x75" alt=""/></div>
+                    <div class="features-block__img-wrap"><img src="../img/icons/1.png" alt=""/></div>
                     <div class="features-block__text-wrap"><span>&Kcy;&ocy;&lcy;&lcy;&iecy;&kcy;&tscy;&icy;&icy; &mcy;&iecy;&bcy;&iecy;&lcy;&icy; &icy;&zcy; &ncy;&acy;&tcy;&ucy;&rcy;&acy;&lcy;&softcy;&ncy;&ocy;&gcy;&ocy; &dcy;&iecy;&rcy;&iecy;&vcy;&acy; &tscy;&iecy;&ncy;&ncy;&ycy;&khcy; &pcy;&ocy;&rcy;&ocy;&dcy;</span>
                       <p>&Mcy;&iecy;&bcy;&iecy;&lcy;&softcy; &scy;&ocy;&bcy;&icy;&rcy;&acy;&iecy;&tcy;&scy;&yacy; &icy; &ocy;&bcy;&rcy;&acy;&bcy;&acy;&tcy;&ycy;&vcy;&acy;&iecy;&tcy;&scy;&yacy; &vcy;&rcy;&ucy;&chcy;&ncy;&ucy;&yucy; &icy;&ncy;&dcy;&icy;&jcy;&scy;&kcy;&icy;&mcy;&icy; &mcy;&acy;&scy;&tcy;&iecy;&rcy;&acy;&mcy;&icy;</p>
                     </div>
@@ -368,7 +373,7 @@
                 </li>
                 <li>
                   <div class="features-block__item">
-                    <div class="features-block__img-wrap"><img src="https://via.placeholder.com/50x75" alt=""/></div>
+                    <div class="features-block__img-wrap"><img src="../img/icons/2.png" alt=""/></div>
                     <div class="features-block__text-wrap"><span>&Acy;&ncy;&tcy;&icy;&kcy;&vcy;&acy;&rcy;&icy;&acy;&tcy; &icy;&zcy; &YAcy;&pcy;&ocy;&ncy;&icy;&icy;</span>
                       <p>&Scy;&acy;&mcy;&ucy;&rcy;&acy;&jcy;&scy;&kcy;&icy;&iecy; &mcy;&iecy;&chcy;&icy;, &kcy;&icy;&mcy;&ocy;&ncy;&ocy;, </p>
                     </div>
@@ -376,7 +381,7 @@
                 </li>
                 <li>
                   <div class="features-block__item">
-                    <div class="features-block__img-wrap"><img src="https://via.placeholder.com/50x75" alt=""/></div>
+                    <div class="features-block__img-wrap"><img src="../img/icons/3.png" alt=""/></div>
                     <div class="features-block__text-wrap"><span>&Kcy;&ocy;&lcy;&lcy;&iecy;&kcy;&tscy;&icy;&icy; &mcy;&iecy;&bcy;&iecy;&lcy;&icy; &icy;&zcy; &ncy;&acy;&tcy;&ucy;&rcy;&acy;&lcy;&softcy;&ncy;&ocy;&gcy;&ocy; &dcy;&iecy;&rcy;&iecy;&vcy;&acy; &tscy;&iecy;&ncy;&ncy;&ycy;&khcy; &pcy;&ocy;&rcy;&ocy;&dcy;</span>
                       <p>&Mcy;&iecy;&bcy;&iecy;&lcy;&softcy; &scy;&ocy;&bcy;&icy;&rcy;&acy;&iecy;&tcy;&scy;&yacy; &icy; &ocy;&bcy;&rcy;&acy;&bcy;&acy;&tcy;&ycy;&vcy;&acy;&iecy;&tcy;&scy;&yacy; &vcy;&rcy;&ucy;&chcy;&ncy;&ucy;&yucy; &icy;&ncy;&dcy;&icy;&jcy;&scy;&kcy;&icy;&mcy;&icy; &mcy;&acy;&scy;&tcy;&iecy;&rcy;&acy;&mcy;&icy;</p>
                     </div>
@@ -384,7 +389,7 @@
                 </li>
                 <li>
                   <div class="features-block__item">
-                    <div class="features-block__img-wrap"><img src="https://via.placeholder.com/50x75" alt=""/></div>
+                    <div class="features-block__img-wrap"><img src="../img/icons/4.png" alt=""/></div>
                     <div class="features-block__text-wrap"><span>&Kcy;&ocy;&lcy;&lcy;&iecy;&kcy;&tscy;&icy;&icy; &mcy;&iecy;&bcy;&iecy;&lcy;&icy; &icy;&zcy; &ncy;&acy;&tcy;&ucy;&rcy;&acy;&lcy;&softcy;&ncy;&ocy;&gcy;&ocy; &dcy;&iecy;&rcy;&iecy;&vcy;&acy; &tscy;&iecy;&ncy;&ncy;&ycy;&khcy; &pcy;&ocy;&rcy;&ocy;&dcy;</span>
                       <p>&Mcy;&iecy;&bcy;&iecy;&lcy;&softcy; &scy;&ocy;&bcy;&icy;&rcy;&acy;&iecy;&tcy;&scy;&yacy; &icy; &ocy;&bcy;&rcy;&acy;&bcy;&acy;&tcy;&ycy;&vcy;&acy;&iecy;&tcy;&scy;&yacy; &vcy;&rcy;&ucy;&chcy;&ncy;&ucy;&yucy; &icy;&ncy;&dcy;&icy;&jcy;&scy;&kcy;&icy;&mcy;&icy; &mcy;&acy;&scy;&tcy;&iecy;&rcy;&acy;&mcy;&icy;</p>
                     </div>
@@ -392,7 +397,7 @@
                 </li>
                 <li>
                   <div class="features-block__item">
-                    <div class="features-block__img-wrap"><img src="https://via.placeholder.com/50x75" alt=""/></div>
+                    <div class="features-block__img-wrap"><img src="../img/icons/5.png" alt=""/></div>
                     <div class="features-block__text-wrap"><span>&Kcy;&ocy;&lcy;&lcy;&iecy;&kcy;&tscy;&icy;&icy; &mcy;&iecy;&bcy;&iecy;&lcy;&icy; &icy;&zcy; &ncy;&acy;&tcy;&ucy;&rcy;&acy;&lcy;&softcy;&ncy;&ocy;&gcy;&ocy; &dcy;&iecy;&rcy;&iecy;&vcy;&acy; &tscy;&iecy;&ncy;&ncy;&ycy;&khcy; &pcy;&ocy;&rcy;&ocy;&dcy;</span>
                       <p>&Mcy;&iecy;&bcy;&iecy;&lcy;&softcy; &scy;&ocy;&bcy;&icy;&rcy;&acy;&iecy;&tcy;&scy;&yacy; &icy; &ocy;&bcy;&rcy;&acy;&bcy;&acy;&tcy;&ycy;&vcy;&acy;&iecy;&tcy;&scy;&yacy; &vcy;&rcy;&ucy;&chcy;&ncy;&ucy;&yucy; &icy;&ncy;&dcy;&icy;&jcy;&scy;&kcy;&icy;&mcy;&icy; &mcy;&acy;&scy;&tcy;&iecy;&rcy;&acy;&mcy;&icy;</p>
                     </div>
