Started to work on popup

--- a/app/index.html
+++ b/app/index.html
@@ -516,6 +516,32 @@
       </div>
     </div>
   </div>
+  <div class="cart-popup">
+    <div class="cart-popup__window">
+      <div class="cart-popup__window-close-btn"></div>
+      <div class="cart-popup__window-title"><span>Добавлено в корзину</span></div>
+      <div class="cart-popup__window-goods">
+        <ul class="cart-popup__window-goods-list">
+          <li class="cart-popup__window-goods-list-item">
+            <div class="cart-popup__window-goods-list-item-left">
+              <div class="cart-popup__window-goods-list-item-left-img"><img src="" alt=""/></div>
+            </div>
+            <div class="cart-popup__window-goods-list-item-center">
+              <div class="cart-popup__window-goods-list-item-center-title"><a href="#">Комод "Восточное Очарование"</a></div>
+              <div class="cart-popup__window-goods-list-item-center-descr"><span>массив палисандра, латунь</span></div>
+            </div>
+            <div class="cart-popup__window-goods-list-item-right">
+              <div class="cart-popup__window-goods-list-item-right-old-price"><span>
+                  <strike>59700 &#x20BD;</strike></span></div>
+              <div class="cart-popup__window-goods-list-item-right-new-price"><span>59700 &#x20BD;</span></div>
+            </div>
+          </li>
+        </ul>
+      </div>
+      <div class="cart-popup__window-descr"></div>
+      <div class="cart-popup__window-buttons"></div>
+    </div>
+  </div>
   <script src="./js/libs.min.js"></script>
   <script src="./js/common.js"></script>
 </body>
