--- a/app/index.html
+++ b/app/index.html
@@ -26,7 +26,7 @@
                   <div class="page__logo"><img src="./img/logo.png" alt="Интерьеры Махараджей"/></div>
                 </div>
               </div>
-              <div class="col-md-3">
+              <div class="col-md-3 page-header__top-right-col">
                 <div class="page-header__right">
                   <div class="page-header__search">
                     <form class="page-header__search-form">
@@ -41,6 +41,36 @@
         </div>
         <div class="page-header__middle">
           <div class="container">
+            <div class="row page-header__middle-mobile-menu-wrap">
+              <div class="col">
+                <div class="phone-number phone-number--mob">
+                  <div class="phone-number__icon phone-number__icon--mob"><a href="tel:+79031035309"><svg enable-background="new 0 0 14.68 14.74" viewBox="0 0 14.68 14.74" xmlns="http://www.w3.org/2000/svg"><path d="m13.45 10.89c0 .15-.03.36-.09.6-.06.25-.12.44-.18.59-.12.29-.47.59-1.05.91-.54.29-1.07.44-1.59.44-.15 0-.31-.01-.45-.03s-.31-.06-.49-.11-.31-.09-.4-.12-.25-.09-.48-.18-.37-.14-.42-.15c-.56-.2-1.06-.44-1.5-.71-.73-.45-1.48-1.07-2.26-1.85-.8-.8-1.41-1.55-1.86-2.28-.28-.44-.52-.94-.72-1.5-.01-.05-.06-.19-.15-.42s-.15-.38-.18-.47-.07-.23-.12-.41-.09-.34-.11-.49-.03-.3-.03-.45c0-.53.15-1.06.44-1.6.32-.58.62-.93.91-1.05.14-.06.34-.12.59-.18s.45-.09.6-.09c.08 0 .14.01.18.03.1.03.25.25.45.65.07.12.15.27.26.47s.21.38.3.54c.09.17.18.32.27.46.02.02.07.09.15.21.08.13.14.23.18.31s.06.16.06.24c0 .11-.08.26-.24.43-.16.18-.34.33-.53.48-.19.14-.37.29-.54.45-.16.16-.24.29-.24.4 0 .05.01.12.04.19.03.08.05.14.07.18s.06.11.12.21.09.15.1.16c.44.78.94 1.45 1.5 2.01s1.23 1.06 2.01 1.49c.01.01.07.04.16.1.1.06.17.1.21.12s.1.04.18.07.14.04.19.04c.1 0 .23-.08.39-.24s.32-.34.46-.53.3-.37.47-.53.31-.24.43-.24c.08 0 .16.02.24.06s.18.1.3.18.19.13.21.15c.14.09.3.17.46.27.16.09.34.19.54.3s.36.19.46.26c.4.2.62.35.65.45.04.04.05.1.05.18z" fill="none" stroke="#666" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="22.9256"/></svg></a></div>
+                </div>
+              </div>
+              <div class="col">
+                <div class="page-header__search page-header__search--mob">
+                  <div class="page-header__search--mob-btn"><i class="fas fa-search fa-2x"></i></div>
+                </div>
+              </div>
+              <div class="col">
+                <div class="page-header__cart page-header__cart--mob"><a class="page-header__cart-icon" href="#" title="Перейти в корзину"><img src="./img/icons/cart.png" alt="Корзина"/></a>
+                  <div class="page-header__cart-badge">2</div>
+                </div>
+              </div>
+              <div class="col">
+                <div class="page-header__mobile-menu">
+                  <button class="page-header__mobile-menu-btn">Меню</button>
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col">
+                <form class="page-header__search-form page-header__search-form--mob">
+                  <input class="page-header__search-input page-header__search-input--mob" placeholder="Поиск по каталогу"/>
+                  <button class="page-header__search-submit page-header__search-submit--mob" type="submit"><i class="fas fa-search fa-2x"></i></button>
+                </form>
+              </div>
+            </div>
             <div class="row">
               <div class="col-md-10">
                 <div class="page-header__middle-menu">
@@ -53,7 +83,7 @@
                   </ul>
                 </div>
               </div>
-              <div class="col-md-2">
+              <div class="col-md-2 page-header__middle-right-col">
                 <div class="page-header__cart"><a class="page-header__cart-icon" href="#" title="Перейти в корзину"><img src="./img/icons/cart.png" alt="Корзина"/></a>
                   <div class="page-header__cart-badge">2</div>
                 </div>
@@ -63,6 +93,7 @@
         </div>
         <div class="page-header__bottom">
           <div class="container">
+            <div class="page-header__bottom--mob"><span class="page-header__bottom--mob-text">Каталог</span><i class="fas fa-chevron-down"></i></div>
             <ul class="page-header__bottom-menu-list">
               <li class="page-header__bottom-menu-list-item"><a class="page-header__bottom-menu-list-item-link" href="#">Мебель и интерьер</a>
                 <div class="dropdown-menu">
@@ -466,7 +497,7 @@
                           </ul>
                         </div>
                       </div>
-                      <div class="col-md-4">
+                      <div class="col-md-4 dropdown-menu__right-column">
                         <div class="dropdown-menu__right"><strong class="dropdown-menu__right-title">Где купить</strong>
                           <div class="dropdown-menu__description">
                             <div class="dropdown-menu__img"><img src="../img/collections/menu-1.jpg" alt=""/></div>
@@ -891,7 +922,7 @@
                           </ul>
                         </div>
                       </div>
-                      <div class="col-md-4">
+                      <div class="col-md-4 dropdown-menu__right-column">
                         <div class="dropdown-menu__right"><strong class="dropdown-menu__right-title">Где купить</strong>
                           <div class="dropdown-menu__description">
                             <div class="dropdown-menu__img"><img src="../img/collections/menu-1.jpg" alt=""/></div>
@@ -1316,7 +1347,7 @@
                           </ul>
                         </div>
                       </div>
-                      <div class="col-md-4">
+                      <div class="col-md-4 dropdown-menu__right-column">
                         <div class="dropdown-menu__right"><strong class="dropdown-menu__right-title">Где купить</strong>
                           <div class="dropdown-menu__description">
                             <div class="dropdown-menu__img"><img src="../img/collections/menu-1.jpg" alt=""/></div>
@@ -1741,7 +1772,7 @@
                           </ul>
                         </div>
                       </div>
-                      <div class="col-md-4">
+                      <div class="col-md-4 dropdown-menu__right-column">
                         <div class="dropdown-menu__right"><strong class="dropdown-menu__right-title">Где купить</strong>
                           <div class="dropdown-menu__description">
                             <div class="dropdown-menu__img"><img src="../img/collections/menu-1.jpg" alt=""/></div>
@@ -2166,7 +2197,7 @@
                           </ul>
                         </div>
                       </div>
-                      <div class="col-md-4">
+                      <div class="col-md-4 dropdown-menu__right-column">
                         <div class="dropdown-menu__right"><strong class="dropdown-menu__right-title">Где купить</strong>
                           <div class="dropdown-menu__description">
                             <div class="dropdown-menu__img"><img src="../img/collections/menu-1.jpg" alt=""/></div>
@@ -2194,42 +2225,40 @@
         </div>
       </header>
       <div class="page-hero">
-        <div class="container-fluid">
-          <div class="owl-carousel owl-theme owl-loaded" id="carouselHero">
-            <div class="owl-stage-outer">
-              <div class="owl-stage">
-                <div class="page-hero__owl-item owl-item">
-                  <div class="page-hero__text-block">
-                    <h2 class="page-hero__title">&Ncy;&ocy;&vcy;&acy;&yacy; &kcy;&ocy;&lcy;&lcy;&iecy;&kcy;&tscy;&icy;&yacy;</h2>
-                    <p class="page-hero__subtitle">&ucy;&zhcy;&iecy; &vcy; Artplay</p>
-                    <p class="page-hero__text">&Pcy;&ocy;&scy;&mcy;&ocy;&tcy;&rcy;&icy;&tcy;&iecy; &ncy;&ocy;&vcy;&ucy;&yucy; &kcy;&ocy;&lcy;&lcy;&iecy;&kcy;&tscy;&icy;&yucy; &icy;&zcy; &ucy;&ncy;&icy;&kcy;&acy;&lcy;&softcy;&ncy;&ocy;&jcy; &mcy;&iecy;&bcy;&iecy;&lcy;&icy; &icy; &pcy;&rcy;&iecy;&dcy;&mcy;&iecy;&tcy;&ocy;&vcy;</p>
-                    <button class="page-hero__btn" type="button">&Pcy;&ocy;&dcy;&rcy;&ocy;&bcy;&ncy;&iecy;&iecy;</button>
-                  </div><img src="./img/slider/slide-1.jpg" alt=""/>
-                </div>
+        <div class="owl-carousel owl-theme owl-loaded" id="carouselHero">
+          <div class="owl-stage-outer">
+            <div class="owl-stage">
+              <div class="page-hero__owl-item owl-item">
+                <div class="page-hero__text-block">
+                  <h2 class="page-hero__title">&Ncy;&ocy;&vcy;&acy;&yacy; &kcy;&ocy;&lcy;&lcy;&iecy;&kcy;&tscy;&icy;&yacy;</h2>
+                  <p class="page-hero__subtitle">&ucy;&zhcy;&iecy; &vcy; Artplay</p>
+                  <p class="page-hero__text">&Pcy;&ocy;&scy;&mcy;&ocy;&tcy;&rcy;&icy;&tcy;&iecy; &ncy;&ocy;&vcy;&ucy;&yucy; &kcy;&ocy;&lcy;&lcy;&iecy;&kcy;&tscy;&icy;&yucy; &icy;&zcy; &ucy;&ncy;&icy;&kcy;&acy;&lcy;&softcy;&ncy;&ocy;&jcy; &mcy;&iecy;&bcy;&iecy;&lcy;&icy; &icy; &pcy;&rcy;&iecy;&dcy;&mcy;&iecy;&tcy;&ocy;&vcy;</p>
+                  <button class="page-hero__btn" type="button">&Pcy;&ocy;&dcy;&rcy;&ocy;&bcy;&ncy;&iecy;&iecy;</button>
+                </div><img src="./img/slider/slide-1.jpg" alt=""/>
               </div>
             </div>
-            <div class="owl-stage-outer">
-              <div class="owl-stage">
-                <div class="page-hero__owl-item owl-item">
-                  <div class="page-hero__text-block">
-                    <h2 class="page-hero__title">&Ncy;&ocy;&vcy;&acy;&yacy; &kcy;&ocy;&lcy;&lcy;&iecy;&kcy;&tscy;&icy;&yacy;</h2>
-                    <p class="page-hero__subtitle">&ucy;&zhcy;&iecy; &vcy; Artplay</p>
-                    <p class="page-hero__text">&Pcy;&ocy;&scy;&mcy;&ocy;&tcy;&rcy;&icy;&tcy;&iecy; &ncy;&ocy;&vcy;&ucy;&yucy; &kcy;&ocy;&lcy;&lcy;&iecy;&kcy;&tscy;&icy;&yucy; &icy;&zcy; &ucy;&ncy;&icy;&kcy;&acy;&lcy;&softcy;&ncy;&ocy;&jcy; &mcy;&iecy;&bcy;&iecy;&lcy;&icy; &icy; &pcy;&rcy;&iecy;&dcy;&mcy;&iecy;&tcy;&ocy;&vcy;</p>
-                    <button class="page-hero__btn" type="button">&Pcy;&ocy;&dcy;&rcy;&ocy;&bcy;&ncy;&iecy;&iecy;</button>
-                  </div><img src="./img/slider/slide-1.jpg" alt=""/>
-                </div>
+          </div>
+          <div class="owl-stage-outer">
+            <div class="owl-stage">
+              <div class="page-hero__owl-item owl-item">
+                <div class="page-hero__text-block">
+                  <h2 class="page-hero__title">&Ncy;&ocy;&vcy;&acy;&yacy; &kcy;&ocy;&lcy;&lcy;&iecy;&kcy;&tscy;&icy;&yacy;</h2>
+                  <p class="page-hero__subtitle">&ucy;&zhcy;&iecy; &vcy; Artplay</p>
+                  <p class="page-hero__text">&Pcy;&ocy;&scy;&mcy;&ocy;&tcy;&rcy;&icy;&tcy;&iecy; &ncy;&ocy;&vcy;&ucy;&yucy; &kcy;&ocy;&lcy;&lcy;&iecy;&kcy;&tscy;&icy;&yucy; &icy;&zcy; &ucy;&ncy;&icy;&kcy;&acy;&lcy;&softcy;&ncy;&ocy;&jcy; &mcy;&iecy;&bcy;&iecy;&lcy;&icy; &icy; &pcy;&rcy;&iecy;&dcy;&mcy;&iecy;&tcy;&ocy;&vcy;</p>
+                  <button class="page-hero__btn" type="button">&Pcy;&ocy;&dcy;&rcy;&ocy;&bcy;&ncy;&iecy;&iecy;</button>
+                </div><img src="./img/slider/slide-1.jpg" alt=""/>
               </div>
             </div>
-            <div class="owl-stage-outer">
-              <div class="owl-stage">
-                <div class="page-hero__owl-item owl-item">
-                  <div class="page-hero__text-block">
-                    <h2 class="page-hero__title">&Ncy;&ocy;&vcy;&acy;&yacy; &kcy;&ocy;&lcy;&lcy;&iecy;&kcy;&tscy;&icy;&yacy;</h2>
-                    <p class="page-hero__subtitle">&ucy;&zhcy;&iecy; &vcy; Artplay</p>
-                    <p class="page-hero__text">&Pcy;&ocy;&scy;&mcy;&ocy;&tcy;&rcy;&icy;&tcy;&iecy; &ncy;&ocy;&vcy;&ucy;&yucy; &kcy;&ocy;&lcy;&lcy;&iecy;&kcy;&tscy;&icy;&yucy; &icy;&zcy; &ucy;&ncy;&icy;&kcy;&acy;&lcy;&softcy;&ncy;&ocy;&jcy; &mcy;&iecy;&bcy;&iecy;&lcy;&icy; &icy; &pcy;&rcy;&iecy;&dcy;&mcy;&iecy;&tcy;&ocy;&vcy;</p>
-                    <button class="page-hero__btn" type="button">&Pcy;&ocy;&dcy;&rcy;&ocy;&bcy;&ncy;&iecy;&iecy;</button>
-                  </div><img src="./img/slider/slide-1.jpg" alt=""/>
-                </div>
+          </div>
+          <div class="owl-stage-outer">
+            <div class="owl-stage">
+              <div class="page-hero__owl-item owl-item">
+                <div class="page-hero__text-block">
+                  <h2 class="page-hero__title">&Ncy;&ocy;&vcy;&acy;&yacy; &kcy;&ocy;&lcy;&lcy;&iecy;&kcy;&tscy;&icy;&yacy;</h2>
+                  <p class="page-hero__subtitle">&ucy;&zhcy;&iecy; &vcy; Artplay</p>
+                  <p class="page-hero__text">&Pcy;&ocy;&scy;&mcy;&ocy;&tcy;&rcy;&icy;&tcy;&iecy; &ncy;&ocy;&vcy;&ucy;&yucy; &kcy;&ocy;&lcy;&lcy;&iecy;&kcy;&tscy;&icy;&yucy; &icy;&zcy; &ucy;&ncy;&icy;&kcy;&acy;&lcy;&softcy;&ncy;&ocy;&jcy; &mcy;&iecy;&bcy;&iecy;&lcy;&icy; &icy; &pcy;&rcy;&iecy;&dcy;&mcy;&iecy;&tcy;&ocy;&vcy;</p>
+                  <button class="page-hero__btn" type="button">&Pcy;&ocy;&dcy;&rcy;&ocy;&bcy;&ncy;&iecy;&iecy;</button>
+                </div><img src="./img/slider/slide-1.jpg" alt=""/>
               </div>
             </div>
           </div>
@@ -2480,9 +2509,9 @@
             <div class="col-md-3">
               <div class="page-footer__top-right">
                 <div class="phone-number phone-number--footer">
-                  <div class="phone-number__icon"><svg enable-background="new 0 0 14.68 14.74" viewBox="0 0 14.68 14.74" xmlns="http://www.w3.org/2000/svg"><path d="m13.45 10.89c0 .15-.03.36-.09.6-.06.25-.12.44-.18.59-.12.29-.47.59-1.05.91-.54.29-1.07.44-1.59.44-.15 0-.31-.01-.45-.03s-.31-.06-.49-.11-.31-.09-.4-.12-.25-.09-.48-.18-.37-.14-.42-.15c-.56-.2-1.06-.44-1.5-.71-.73-.45-1.48-1.07-2.26-1.85-.8-.8-1.41-1.55-1.86-2.28-.28-.44-.52-.94-.72-1.5-.01-.05-.06-.19-.15-.42s-.15-.38-.18-.47-.07-.23-.12-.41-.09-.34-.11-.49-.03-.3-.03-.45c0-.53.15-1.06.44-1.6.32-.58.62-.93.91-1.05.14-.06.34-.12.59-.18s.45-.09.6-.09c.08 0 .14.01.18.03.1.03.25.25.45.65.07.12.15.27.26.47s.21.38.3.54c.09.17.18.32.27.46.02.02.07.09.15.21.08.13.14.23.18.31s.06.16.06.24c0 .11-.08.26-.24.43-.16.18-.34.33-.53.48-.19.14-.37.29-.54.45-.16.16-.24.29-.24.4 0 .05.01.12.04.19.03.08.05.14.07.18s.06.11.12.21.09.15.1.16c.44.78.94 1.45 1.5 2.01s1.23 1.06 2.01 1.49c.01.01.07.04.16.1.1.06.17.1.21.12s.1.04.18.07.14.04.19.04c.1 0 .23-.08.39-.24s.32-.34.46-.53.3-.37.47-.53.31-.24.43-.24c.08 0 .16.02.24.06s.18.1.3.18.19.13.21.15c.14.09.3.17.46.27.16.09.34.19.54.3s.36.19.46.26c.4.2.62.35.65.45.04.04.05.1.05.18z" fill="none" stroke="#666" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="22.9256"/></svg></div><span class="phone-number__text"><a href="tel:+79031035309">7 903 103-53-09</a></span>
+                  <div class="phone-number__icon"><svg enable-background="new 0 0 14.68 14.74" viewBox="0 0 14.68 14.74" xmlns="http://www.w3.org/2000/svg"><path d="m13.45 10.89c0 .15-.03.36-.09.6-.06.25-.12.44-.18.59-.12.29-.47.59-1.05.91-.54.29-1.07.44-1.59.44-.15 0-.31-.01-.45-.03s-.31-.06-.49-.11-.31-.09-.4-.12-.25-.09-.48-.18-.37-.14-.42-.15c-.56-.2-1.06-.44-1.5-.71-.73-.45-1.48-1.07-2.26-1.85-.8-.8-1.41-1.55-1.86-2.28-.28-.44-.52-.94-.72-1.5-.01-.05-.06-.19-.15-.42s-.15-.38-.18-.47-.07-.23-.12-.41-.09-.34-.11-.49-.03-.3-.03-.45c0-.53.15-1.06.44-1.6.32-.58.62-.93.91-1.05.14-.06.34-.12.59-.18s.45-.09.6-.09c.08 0 .14.01.18.03.1.03.25.25.45.65.07.12.15.27.26.47s.21.38.3.54c.09.17.18.32.27.46.02.02.07.09.15.21.08.13.14.23.18.31s.06.16.06.24c0 .11-.08.26-.24.43-.16.18-.34.33-.53.48-.19.14-.37.29-.54.45-.16.16-.24.29-.24.4 0 .05.01.12.04.19.03.08.05.14.07.18s.06.11.12.21.09.15.1.16c.44.78.94 1.45 1.5 2.01s1.23 1.06 2.01 1.49c.01.01.07.04.16.1.1.06.17.1.21.12s.1.04.18.07.14.04.19.04c.1 0 .23-.08.39-.24s.32-.34.46-.53.3-.37.47-.53.31-.24.43-.24c.08 0 .16.02.24.06s.18.1.3.18.19.13.21.15c.14.09.3.17.46.27.16.09.34.19.54.3s.36.19.46.26c.4.2.62.35.65.45.04.04.05.1.05.18z" fill="none" stroke="#666" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="22.9256"/></svg></div><span class="phone-number__text phone-number__text"><a href="tel:+79031035309">7 903 103-53-09</a></span>
                 </div>
-                <div class="page-footer__top-right-text"><span>По всем вопросам пишите нам на</span></div>
+                <div class="page-footer__top-right-text">span По всем вопросам пишите нам на</div>
                 <div class="page-footer__top-right-email">
                   <div class="page-footer__top-right-email-icon"><?xml version="1.0" encoding="utf-8"?>
 <!-- Generator: Adobe Illustrator 23.0.1, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
